@@ -1,3 +1,9 @@
+2014-02-10  Nick Clifton  <nickc@redhat.com>
+
+	* config/mn10300/mn10300.c (popcount): New function.
+	(mn10300_expand_prologue): Include saved registers in stack usage
+	count.
+
 2014-02-10  Jeff Law  <law@redhat.com>
 
 	PR middle-end/52306
